# bait-chat

./: .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  MANIFEST.in  Makefile  README.md  compose.yml  docker-compose.local-llm.yml  docker-compose.yml  pyproject.toml  requirements.txt
.logs/: logging.log.1  logging.log.2  logging.log.3  logging.log.4  logging.log.5
backend/: __init__.py  agent.py  databroker.py  explain.py  local_llm.py  main.py  models.py  qserver.py  rag_engine.py
bait_chat/: __init__.py  cli.py
bait_chat/backend/: __init__.py  config.py  server.py
bait_chat/frontend/: app.py
bait_chat/test_instrument/test_instrument/callbacks/: nexus_data_file_writer.py
bait_chat/test_instrument/test_instrument/configs/: devices.yml
bait_chat/test_instrument/test_instrument/plans/: dm_plans.py
bait_chat/tests/: test_api.py
config/: __init__.py  settings.py
docker/: Dockerfile.backend  Dockerfile.base  Dockerfile.frontend  Dockerfile.qserver
docs/: DEMO_README.md  LMSTUDIO_OPENAI_OSS.md  LOCAL_MODELS.md
knowledge_base/bits_devices/: example_devices.json
knowledge_base/plans/: standard_plans.md
scripts/: README.md  demo.sh  docker-down.sh  docker-logs.sh  docker-up.sh  install-deps.sh  start-backend.sh  start-frontend.sh  start-qserver.sh  stop-qserver.sh
src/bait_chat/: __init__.py  app.py  demo.py
src/bait_mcp/: models.py  server.py
src/demo_instrument/qserver/: qs-config.yml  qs_host.sh  start_qserver.py
src/demo_instrument/test_instrument/: startup.py
src/tests/: test_api.py
tests/: __init__.py  test_api.py  test_local_llm.py  test_qserver.py  test_rag.py
ui/: __init__.py  components.py  streamlit_app.py
