[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bait-chat"
dynamic = ["version"]
description = "AI-powered assistant for Bluesky beamline control"
authors = [{name = "bAIt-Chat Development Team", email = "support@bait-chat.dev"}]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["bluesky", "beamline", "synchrotron", "ai", "assistant", "queueserver"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research", 
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0", 
    "streamlit>=1.28.0",
    "aiohttp>=3.8.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=4.0.0",
]

[project.optional-dependencies]
qserver = [
    "bluesky-queueserver>=0.0.20",
    "bluesky>=1.10.0",
    "ophyd>=1.7.0", 
    "databroker>=1.2.5",
    "apsbits>=0.4.0",
    "apstools>=1.6.0",
]

ai = [
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0", 
    "langchain-anthropic>=0.1.0",
    "chromadb>=0.4.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0", 
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

all = [
    "bait-chat[qserver,ai,dev]",
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
]

[project.scripts]
bait-chat = "bait_chat.cli:main"
bait-chat-demo = "bait_chat.demo:main"
bait-chat-backend = "bait_mcp.server:main"  
bait-chat-frontend = "bait_chat.app:main"

[project.urls]
Homepage = "https://github.com/example/bait-chat"
Repository = "https://github.com/example/bait-chat.git"
Documentation = "https://bait-chat.readthedocs.io"
Changelog = "https://github.com/example/bait-chat/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "bait_chat.__version__"}

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["bait_chat*", "bait_mcp*", "demo_instrument*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
bait_chat = [
    "static/**/*", 
    "templates/**/*",
]
demo_instrument = [
    "**/*.yml",
    "**/*.yaml",
    "**/*.sh",
]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = ["src/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (may be slow)",
    "unit: marks tests as unit tests", 
    "performance: marks tests as performance tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true